# mcpproject

./: .gitignore  .vercelignore  DEPLOYMENT.md  QUICK_START.md  README.md  config_mcp.json  deploy.bat  deploy.sh  env_template.txt  main.py  pyproject.toml  requirements-streamlit.txt  requirements.txt  test_local.py  test_windows.py  vercel.json
api/: index.py
backend/: main.py
backend/agents/: advanced_agents.py  classroom_agent.py  course_agent.py  learning_path_agent.py  progress_agent.py  quiz_agent.py  translation_agent.py
backend/api/: courses.py  learning_path.py  progress.py  quiz.py  sync.py
backend/db/: database.py  models.py
backend/services/: classroom_mcp_client.py  mcp_client.py  mooc_mcp_client.py  real_apis.py  translation_mcp_client.py
backend/tests/: test_basic.py
frontend/: app.py  requirements-streamlit.txt
mcp_servers/analytics_server/: main.py
mcp_servers/classroom_server/: main.py
mcp_servers/mooc_server/: main.py
mcp_servers/translation_server/: main.py
